payment-service/kustomize/overlays/stg/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-service-ingress
  namespace: apps-payment-service
spec:
  rules:
    - host: payment-service.stg.musa.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service-service
                port:
                  number: 3000
  tls:
    - hosts:
        - payment-service.stg.musa.co
      secretName: payment-service-stg-musa-co-tls
